css/style.css
@charset "UTF-8";

@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');

html {
    font-size: 100%;
}

body {
    font-family: 'Zen Kaku Gothic Antique', sans-serif;
}

h1, h2, h3, h4, h5, h6, p, a {
    font-family: 'Zen Kaku Gothic Antique', sans-serif;
}

a, a:link, a:visited, a:focus {
    color: #666666;
    outline: none;
}

a:hover {
    color: #101010;
}

#navTitle {
    font-size: 1.25rem;
    font-weight: bold;
    width: 100%;
    text-align: center;
}

#navClose {
    font-size: 2rem;
    font-weight: bold;
    cursor: pointer;
}

#mobileNav {
    width: 80%;
    background-color: #ECECEC;
}

#mobileNav.position-left:not(.is-open) {
    transform: translateX(-100%);
}

#mobileNav.position-left.is-closed {
    transform: translateX(-100%);
}

#menuButton {
    width: 2.25rem;
    height: 2.25rem;
}

#companyIcon {
    width: 3.5rem;
    height: 3.5rem;
}

#companyName {
    font-family: 'Pacifico', cursive;
    font-size: 2rem;
    font-weight: normal;
    color: #FFFFFF;
    margin-left: 1rem;
    margin-top: 0.5rem;
    display: inline-block;
}

#instagramMobile {
    width: 1rem;
    height: 1rem;
}

#instagramDesktop {
    width: 1.5rem;
    height: 1.5rem;
}

#splashPhoto {
    width: 100%;
    height: auto;
    min-height: 18rem;
    object-fit: cover;
}

/* small and medium screen */
@media only screen and (max-width: 1024px) {
    #profilePhoto {
        width: 50%;
        height: auto;
        float: left;
        border: solid 2px #FFFFFF;
        border-radius: 50%;
        margin: -4rem 2rem 1rem 0;
    }
}

/* large screen */
@media only screen and (min-width: 1024px) {
    #profilePhoto {
        width: 33%;
        height: auto;
        float: left;
        border: solid 2px #FFFFFF;
        border-radius: 50%;
        margin: -4rem 2rem 1rem 0;
    }
}

/* small screen */
@media only screen and (max-width: 640px) {
    #profileName{
        font-size: 1.5rem;
        margin-top: 1.25rem;
    }
}

/* medium screen */
@media only screen and (min-width: 640px) and (max-width: 1024px) {
    #profileName{
        font-size: 1.75rem;
        margin-top: 1.5rem;
    }
}

/* large screen */
@media only screen and (min-width: 1024px) {
    #profileName{
        font-size: 2rem;
        margin-top: 1.5rem;
    }
}

.rightCell {
    width: 100%;
    justify-content: right;
    display: flex;
    align-items:center
}

.centerCell {
    width: 100%;
    justify-content: center;
    display: flex;
    align-items: center;
}

.header {
    position: fixed;
    width: 100%;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    background-color: #8B1656; /*#B20061;*/
    z-index: 1;
}

.navLink, .navLink:link, .navLink:visited, .navLink:focus {
    color: #FFFFFF;
    margin-top: 0.5rem;
}

.navLink:hover {
    color: #D2D2D2;
}

.featureTitle {
    font-size: 1.75rem;
    font-weight: bold;
    color: #000000;
}

.featureImage {
    border: solid 1px #D2D2D2;
    border-radius: 3%;
    width: 95%;
    height: auto;
}

.featureName {
    font-size: 1rem;
    font-weight: bold;
    font-style: italic;
    text-align: center;
    margin-top: 0.25rem;
    margin-bottom: 0;
}

.featureDescription {
    font-size: 1rem;
    font-weight: normal;
    text-align: center;
    margin-top: -0.25rem;
    margin-bottom: 0.5rem;
}

.featureViewAll {
    position: relative;
    width: 95%;
}

.featureViewAll:before {
    content: "";
    display: block;
    padding-top: 100%;
}

.featureViewAllBg {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    border: solid 1px #D2D2D2;
    border-radius: 3%;
    background-color: #E0D5BF;
    line-height:100%;
    height:100%;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

.featureViewAllText {
    font: normal normal 2rem 'Pacifico', cursive; 
    color: #666666;
}

.bold {
    font-weight: bold;
}

.italic {
    font-style: italic;
}

.clear {
    clear: both;
}

